<resources>
    <string name="app_name" translatable="false">DevSpace</string>
    <string name="label_Name">Name</string>
    <string name="label_Password">Password</string>
    <string name="name_btnRegister">Register</string>
    <string name="label_Email">Email</string>
    <string name="preferences_title">Settings</string>
    <string name="title_miProfile">Profile</string>
    <string name="title_miLogout">Logout</string>
    <string name="text_tvAmountLikes">0 Likes</string>
    <string name="label_AboutMe">About You</string>
    <string name="name_btnFileChooser">Choose</string>
    <string name="label_ProfileImage">Profile Image</string>
    <string name="text_GoLogin">Already have an account ?</string>
    <string name="label_PostImage">Image</string>
    <string name="label_PostCodeURL">"URL to the code : "</string>
    <string name="label_PostDescription">Description</string>
    <string name="tag_btnPostCancel">Cancel</string>
    <string name="tag_btnPostSave">Save</string>
    <string name="filter_hint">Search for any post</string>

    <!-- Menu strings -->
    <string name="itPosts_title">Posts</string>
    <string name="itProfile_title">Profile</string>
    <string name="itMessages_title">Messages</string>
    <string name="itSettings_title">Settings</string>
    <string name="itLogout_title">Logout</string>
    <string name="title_miAddPost">Add Post</string>
    <string name="label_ConfirmPassword">Confirm password</string>

    <!-- Login strings -->
    <string name="text_GoRegister">Create an account</string>
    <string name="err_wrong_password">The password provided is incorrect</string>
    <string name="text_rememberMe">Do you want to stay signed in ?</string>
    <string name="err_UserDoesNotExists">This user is does not exist</string>
    <string name="err_UserAlreadyExists">This user already exists</string>
    <string name="name_btnLogin">Login</string>
    <string name="err_PasswordDoNotMatch">The passwords provided did not match</string>
    <string name="label_user_tag" translatable="false">Tag</string>
    <string name="label_Username">Username</string>
    <string name="text_btnGoogleLogin">Sign in with google</string>
    <string name="err_IncompleteRegistration">All fields are required</string>

    <!-- Post card strings -->
    <string name="tag_LearnMore">Learn More</string>
    <string name="hint_etMessage"><i>Type a message ...</i></string>
    <string name="default_tvReceiverName" translatable="false">Anonymous</string>
    <string name="successfulUpload">"was successfully uploaded"</string>
    <string name="error">There was some error</string>
    <string name="confirm_profile_changes_title">Update profile</string>
    <string name="confirm_profile_changes_message">Do you want to update your profile with the modifications done ?</string>

    <!-- Add Post strings -->
    <string name="title_AddPost">Add a new Post</string>
    <string name="add_post_btnAddPost_text">Post</string>
    <string name="add_post_description_hint"><i>Describe your code ...</i></string>
    <string name="add_post_url_hint"><i>Insert a link to your code here</i></string>
    <string name="post_description_too_short">Add a notable description to your new post (at least 15 characters)</string>
    <string name="malformed_URL">Cannot find this link</string>
    <string name="choose_post_image">Choose an image for your new post by holding the icon above</string>

    <!-- PrivateChat strings -->
    <string name="title_typeFirstMessage">Start chatting</string>
    <string name="message_typeFirstMessage">Type your first message to start this conversation !!</string>
    <string name="tap_twice_to_exit">Tap again to exit</string>
    <string name="default_profile_image" translatable="false"><![CDATA[https://firebasestorage.googleapis.com/v0/b/devspace-b93f2.appspot.com/o/profile_images%2Fanonymous.svg?alt=media&token=8587c03e-a4de-4144-ba5e-839662d1638f]]></string>
    <string name="toolbar_label_Chat">Chat</string>
    <string name="toolbar_label_Messages">Messages</string>
    <string name="toolbar_label_Profile">Profile</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="save_modifications">Save Changes</string>
    <string name="text_tvPrivateChatDate">commented on </string>
    <string name="title_notification">New chat created</string>
    <string name="body_notification">You have created a new chat and an email will be sent to notify it</string>
    <string name="email_sent">A notification email was sent to this user</string>

</resources>