<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/dkgrey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/size_AppName_choose_login_register"
        android:fontFamily="serif-monospace"
        android:textColor="@color/blue"
        android:layout_marginTop="@dimen/tvAppName_marginVertical_choose_login_register"
        android:layout_marginBottom="@dimen/tvAppName_marginVertical_choose_login_register"/>

    <Button
        android:id="@+id/btnChooseLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name_btnLogin"
        android:fontFamily="monospace"
        android:backgroundTint="@color/blue"/>

    <Button
        android:id="@+id/btnChooseRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name_btnRegister"
        android:fontFamily="monospace"
        android:backgroundTint="@color/blue"/>

</LinearLayout>