<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dkgrey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/size_AppName_choose_login_register"
                android:fontFamily="serif-monospace"
                android:textColor="@color/blue"
                android:layout_margin="@dimen/general_margin"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/general_margin"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginEnd="@dimen/general_margin"
                android:layout_marginBottom="@dimen/margin_5dp"
                app:cardCornerRadius="@dimen/general_margin">

                <LinearLayout
                    android:id="@+id/relativeLay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/layoutTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_Tag"
                            android:layout_margin="@dimen/general_margin"/>

                        <EditText
                            android:id="@+id/etRegisterTag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/general_margin"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_Username"
                            android:layout_margin="@dimen/general_margin"/>

                        <EditText
                            android:id="@+id/etRegisterUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/general_margin"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutProfileImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_ProfileImage"/>

                        <Button
                            android:id="@+id/btnFileChooser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_btnFileChooser"
                            android:layout_margin="@dimen/general_margin"/>

                        <TextView
                            android:id="@+id/tvRegisterFileName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_profileImage"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_Email"
                            android:layout_margin="@dimen/general_margin"/>

                        <EditText
                            android:id="@+id/etRegisterEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:layout_margin="@dimen/general_margin"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_Password"
                            android:layout_margin="@dimen/general_margin"/>

                        <EditText
                            android:id="@+id/etRegisterPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:layout_margin="@dimen/general_margin"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_AboutMe"
                            android:layout_margin="@dimen/general_margin"/>

                        <EditText
                            android:id="@+id/etRegisterAboutMe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/general_margin"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="@dimen/general_margin">

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_btnRegister"
                    android:fontFamily="monospace"
                    android:backgroundTint="@color/blue"/>

                <TextView
                    android:id="@+id/tvGoBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:text="@string/text_GoBack"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>